Move keywords to a private static list